opening_hours is not needed
start_date and end_date are effectively the opening_hours.
When an event reoccurs over a period of time, the end date or number of
recurrence will be derived from recurrence_rule.
